front-end-dev/take-home-project-2/style.css
@import url("whitespace-reset.css");

* {
  box-sizing: border-box;
}

html, body {
  font: normal 16px Helvetica, Arial, sans-serif;
  font-weight: 300;
  letter-spacing: 1px;
  width: 1200px;
  min-width: 768px;
  height: 818px;
  color: #b2b5c3;
}

h1 {
  font-size: 21px;
  font-weight: inherit;
}

a {
  text-decoration: none;
  color: inherit;
}

header {
  width: 335px;
  height: 100%;
  float: left;
  background: #464f77;
}

nav ul {
  padding-top: 60px;
}

nav ul li:first-of-type {
  color: #ffffff;
}

nav li {
  position: relative;
  display: table;
  text-align: center;
  height: 40px;
  width: 100%;
}

nav li.selected {
  background: #383f5f;
  color: #ffffff;
}

nav li a {
  display: table-cell;
  vertical-align: middle;
}

nav li a img {
  display: inline;
  padding-right: 10px;
  vertical-align: middle;
}

nav span {
  display: table-cell;
  position: absolute;
  text-align: center;
  right: 35px;
  top: 10px;
  width: 18px;
  height: 18px;
  line-height: 18px;
  border-radius: 50%;
  background: #6b7292;
  color: #b2b5c3;
  font-size: 14px;
  padding: 0;
}

li.selected span {
  background: #148fd5;
  border: 1px solid #148fd5;
  color: #ffffff;
}

ul#completed li + li {
  text-decoration: line-through;
}

main {
  width: auto;
  overflow: hidden;
  color: #050505;
  padding: 60px 100px 0 20px;
}

main h1 span {
  position: relative;
  display: inline-block;
  left: 19px;
  bottom: 2px;
  height: 18px;
  width: 18px;
  line-height: 18px;
  background: #148fd5;
  border-radius: 50%;
  color: #ffffff;
  font-size: 14px;
  text-align: center;
  vertical-align: middle;
}

main li {
  width: 100%;
  padding-left: 10px;
  padding-top: 15px;
  padding-bottom: 15px;
  border-top: 1px solid #e7e7e7;
}

main li:first-of-type,
main li:nth-of-type(2) {
  border-style: none;
}

main li:first-of-type {
  padding-top: 0;
  padding-bottom: 20px;
}

main li label {
  padding-left: 12px;
  cursor: pointer;
}

main li a {
  color: #3498d8;
  padding-left: 15px;
}

main form {
  display: inline-block;
}

main li form:last-of-type {
  float: right;
}

input[type="checkbox"] {
  display: none;
}

span.mycheckbox {
  content: "";
  width: 15px;
  height: 15px;
  display: inline-block;
  vertical-align: middle;
  background: url("images/unchecked-box.png") no-repeat;
}

input[type="checkbox"]:checked + span.mycheckbox {
  background: url("images/checked-box.png") no-repeat;
}

input[type="checkbox"]:checked ~ label {
  color: #cecece;
  text-decoration: line-through;
}

main li + li label:hover {
  color: #3498d8;
}

button {
  background: transparent url("images/trash-bin.png") no-repeat;
  border: none;
  width: 17px;
  height: 17px;
  background-position: 50% 50%;
}

button span {
  display: none;
}

#new-todo {
  display: none;
}

textarea {
  resize: none;
}

